Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-96701

android-build projects cannot be used in Android Studio

XMLWordPrintable

    • Android
    • 13
    • 07cfab07a2a489e021b56226824a2d9b1211fad7 (qt/qtbase/dev) 18f6c2c7eeabbbc6c268dd9649ff542fca9c4c8e (qt/qtbase/6.2), 3bd0b5729 (tqtc/lts-5.15)
    • Team 1 Foundation_Sprint 43

      Some time ago, it was possible to open the "android-build" folder in a qt project with Android Studio to debug the app on the device.

      This fails now with lots of messages about libraries named "nulllib..." being not found, like "Can't find 'nulllibQt6Gui_armeabi-v7a.so'".

      Debugging in qtcreator is not an option as it cannot step through Java code.

      The full output is below.

      09/20 16:51:41: Launching 'android-build' on Google Pixel 4a.
      Install successfully finished in 1 s 103 ms.
      $ adb shell am start -n "org.qtproject.example.bluetoothtestdevice/org.qtproject.qt.android.bindings.QtActivity" -a android.intent.action.MAIN -c android.intent.category.LAUNCHER -D
      Waiting for application to come online: org.qtproject.example.bluetoothtestdevice | org.qtproject.example.bluetoothtestdevice.test
      Waiting for application to come online: org.qtproject.example.bluetoothtestdevice | org.qtproject.example.bluetoothtestdevice.test
      Connected to process 15140 on device 'google-pixel_4a-15031JEC203760'.
      Capturing and displaying logcat messages from application. This behavior can be disabled in the "Logcat output" section of the "Debugger" settings page.
      I/toothtestdevic: Late-enabling -Xcheck:jni
      I/toothtestdevic: Unquickening 12 vdex files!
      W/ActivityThread: Application org.qtproject.example.bluetoothtestdevice is waiting for the debugger on port 8100...
      I/System.out: Sending WAIT chunk
      Connecting to org.qtproject.example.bluetoothtestdevice
      Capturing and displaying logcat messages from application. This behavior can be disabled in the "Logcat output" section of the "Debugger" settings page.
      I/toothtestdevic: Late-enabling -Xcheck:jni
      I/toothtestdevic: Unquickening 12 vdex files!
      W/ActivityThread: Application org.qtproject.example.bluetoothtestdevice is waiting for the debugger on port 8100...
      I/System.out: Sending WAIT chunk
      I/System.out: Debugger has connected
      I/System.out: waiting for debugger to settle...
      Connected to the target VM, address: 'localhost:33725', transport: 'socket'
      I/System.out: waiting for debugger to settle...
      I/System.out: waiting for debugger to settle...
      I/System.out: waiting for debugger to settle...
      I/System.out: waiting for debugger to settle...
      I/System.out: waiting for debugger to settle...
      I/System.out: waiting for debugger to settle...
      I/System.out: waiting for debugger to settle...
      I/System.out: debugger has settled (1427)
      D/NetworkSecurityConfig: No Network Security Config specified, using platform default
      D/NetworkSecurityConfig: No Network Security Config specified, using platform default
      W/System: ClassLoader referenced unknown path: 
      D/Qt JAVA: Class org.qtproject.qt.android.bluetooth.QtBluetoothBroadcastReceiver does not implement setActivity method
      I/Qt JAVA: Can't find 'nulllibc++_shared.so'
          Can't find 'nulllibQt6Core_armeabi-v7a.so'
      I/Qt JAVA: Can't find 'nulllibQt6Network_armeabi-v7a.so'
          Can't find 'nulllibQt6Bluetooth_armeabi-v7a.so'
          Can't find 'nulllibQt6Gui_armeabi-v7a.so'
      I/Qt JAVA: Can't find 'nulllibplugins_platforms_qtforandroid_armeabi-v7a.so'
      W/System.err: java.lang.NullPointerException: Attempt to invoke virtual method 'boolean android.os.Bundle.containsKey(java.lang.String)' on a null object reference
      W/System.err:     at org.qtproject.qt.android.QtNative$4.run(QtNative.java:506)
              at org.qtproject.qt.android.QtThread$2.run(QtThread.java:87)
      W/System.err:     at org.qtproject.qt.android.QtThread$1.run(QtThread.java:61)
      W/System.err:     at java.lang.Thread.run(Thread.java:923)
      W/System.err: java.lang.Exception: 
      W/System.err:     at org.qtproject.qt.android.bindings.QtLoader.loadApplication(QtLoader.java:220)
      W/System.err:     at org.qtproject.qt.android.bindings.QtLoader.startApp(QtLoader.java:388)
              at org.qtproject.qt.android.bindings.QtActivityLoader.onCreate(QtActivityLoader.java:135)
      W/System.err:     at org.qtproject.qt.android.bindings.QtActivity.onCreateHook(QtActivity.java:263)
      W/System.err:     at org.qtproject.qt.android.bindings.QtActivity.onCreate(QtActivity.java:283)
              at android.app.Activity.performCreate(Activity.java:7994)
      W/System.err:     at android.app.Activity.performCreate(Activity.java:7978)
      W/System.err:     at android.app.Instrumentation.callActivityOnCreate(Instrumentation.java:1309)
              at android.app.ActivityThread.performLaunchActivity(ActivityThread.java:3404)
      W/System.err:     at android.app.ActivityThread.handleLaunchActivity(ActivityThread.java:3595)
      W/System.err:     at android.app.servertransaction.LaunchActivityItem.execute(LaunchActivityItem.java:85)
              at android.app.servertransaction.TransactionExecutor.executeCallbacks(TransactionExecutor.java:135)
      W/System.err:     at android.app.servertransaction.TransactionExecutor.execute(TransactionExecutor.java:95)
      W/System.err:     at android.app.ActivityThread$H.handleMessage(ActivityThread.java:2066)
              at android.os.Handler.dispatchMessage(Handler.java:106)
      W/System.err:     at android.os.Looper.loop(Looper.java:223)
              at android.app.ActivityThread.main(ActivityThread.java:7664)
      W/System.err:     at java.lang.reflect.Method.invoke(Native Method)
      W/System.err:     at com.android.internal.os.RuntimeInit$MethodAndArgsCaller.run(RuntimeInit.java:592)
              at com.android.internal.os.ZygoteInit.main(ZygoteInit.java:947)
      I/AdrenoGLES-0: QUALCOMM build                   : 85da404, I46ff5fc46f
          Build Date                       : 11/30/20
          OpenGL ES Shader Compiler Version: EV031.31.04.01
          Local Branch                     : promo490_3_Google
          Remote Branch                    : 
          Remote Branch                    : 
          Reconstruct Branch               : 
          Build Config                     : S P 10.0.4 AArch64
          Driver Path                      : /vendor/lib64/egl/libGLESv2_adreno.so
      I/AdrenoGLES-0: PFP: 0x016ee189, ME: 0x00000000
      W/AdrenoUtils: <ReadGpuID_from_sysfs:197>: Failed to open /sys/class/kgsl/kgsl-3d0/gpu_model
          <ReadGpuID:221>: Failed to read chip ID from gpu_model. Fallback to use the GSL path
      I/Gralloc4: mapper 4.x is not supported
      
      

        For Gerrit Dashboard: QTBUG-96701
        # Subject Branch Project Status CR V

            andreasbuhr Andreas Buhr
            andreasbuhr Andreas Buhr
            Vladimir Minenko Vladimir Minenko
            Alex Blasche Alex Blasche
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes